--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "pg": "^6.1.0",
     "rxjs": "~6.4.0",
+    "sequelize": "^5.21.3",
+    "sequelize-typescript": "^1.1.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -36,9 +39,10 @@
     "@angular/cli": "~8.3.23",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "angular-ide": "^0.9.72",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
