--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@material/select": "^4.0.0",
+    "@material/switch": "^4.0.0",
     "@types/chart.js": "^2.9.11",
     "angular-bootstrap-md": "^8.8.2",
     "animate.css": "^3.7.2",
