--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@material/select": "^4.0.0",
     "@material/switch": "^4.0.0",
+    "@ngrx/entity": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
     "@types/chart.js": "^2.9.11",
     "angular-bootstrap-md": "^8.8.2",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "ngrx": "0.0.1-security",
     "pg": "^6.1.0",
     "rxjs": "~6.4.0",
     "sequelize": "^5.21.3",
     "sequelize-typescript": "^1.1.0",
     "tslib": "^1.10.0",
+    "typeorm": "^0.2.22",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
